# Hackaburg2025_Security_Info_Chatbot

./: .gitignore  README.md  app.py  docker-compose.yml  main.html  package-lock.json
BE/: app.py
Presentation/: Presentation_SecPrompt.pptx
app/: README.md  app.py  pyproject.toml
app/src/: database.py  fe_interface.py  main.py
compliance_chatbot/src/: App.css  App.tsx
frontend/: .env  package-lock.json  package.json
frontend/src/: App.css  App.tsx
